# codestates

./: .gitignore  AUTO_DEPLOY.md  DEPLOY.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  PUBLISH_STEPS.md  QUICKSTART.md  README.md  TEST.md  VERSION_UPDATE.md  example.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
codestats/: __init__.py  analyzer.py  cli.py  detector.py  metrics.py  scorer.py
tests/: test_analyzer.py
